// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddStake /> should render correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-4"
        for="stake-value"
      >
        Stake value
      </label>
      <div
        class="col-sm-8"
      >
        <input
          class="form-control"
          id="stake-value"
          name="stakeValue"
          type="number"
          value=""
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-4"
        for="stakeDuration"
      >
        Stake duration
      </label>
      <div
        class="col-sm-8"
      >
        <input
          class="form-control"
          id="stakeDuration"
          name="stakeDuration"
          type="number"
          value=""
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="col-sm-8 offset-sm-4"
      >
        <div
          class="form-check"
        >
          <input
            class="form-check-input"
            name="infiniteApproval"
            type="checkbox"
            value="false"
          />
          <label
            class="form-check-label"
            title=""
          >
            Infinite approval
          </label>
        </div>
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Stake
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<AddStake /> should validate input from user correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-4"
        for="stake-value"
      >
        Stake value
      </label>
      <div
        class="col-sm-8"
      >
        <input
          class="form-control"
          id="stake-value"
          name="stakeValue"
          type="number"
          value=""
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: inline;"
          >
            Minimum stake is 15000 NU
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-4"
        for="stakeDuration"
      >
        Stake duration
      </label>
      <div
        class="col-sm-8"
      >
        <input
          class="form-control"
          id="stakeDuration"
          name="stakeDuration"
          type="number"
          value=""
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: inline;"
          >
            Minimum duration is 30 periods
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="col-sm-8 offset-sm-4"
      >
        <div
          class="form-check"
        >
          <input
            class="form-check-input"
            name="infiniteApproval"
            type="checkbox"
            value="false"
          />
          <label
            class="form-check-label"
            title=""
          >
            Infinite approval
          </label>
        </div>
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Stake
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<AddStake /> should validate input from user correctly 2`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-4"
        for="stake-value"
      >
        Stake value
      </label>
      <div
        class="col-sm-8"
      >
        <input
          class="form-control"
          id="stake-value"
          name="stakeValue"
          type="number"
          value=""
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: inline;"
          >
            Field is required.
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-sm-4"
        for="stakeDuration"
      >
        Stake duration
      </label>
      <div
        class="col-sm-8"
      >
        <input
          class="form-control"
          id="stakeDuration"
          name="stakeDuration"
          type="number"
          value=""
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: inline;"
          >
            Field is required.
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <div
        class="col-sm-8 offset-sm-4"
      >
        <div
          class="form-check"
        >
          <input
            class="form-check-input"
            name="infiniteApproval"
            type="checkbox"
            value="false"
          />
          <label
            class="form-check-label"
            title=""
          >
            Infinite approval
          </label>
        </div>
      </div>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Stake
      </button>
    </div>
  </form>
</DocumentFragment>
`;
